--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_PROG_INSTALL
 PKG_PROG_PKG_CONFIG
 
 PKG_CHECK_MODULES(IMAGEMAGICK, [Magick++             >= 6.9.9])
-PKG_CHECK_MODULES(EVIX,        [exiv2                >= 0.25])
+PKG_CHECK_MODULES(EXIV,        [exiv2                >= 0.25])
 PKG_CHECK_MODULES(AVFORMAT,    [libavformat          >= 57.71.100])
 PKG_CHECK_MODULES(AVUTIL,      [libavutil            >= 55.58.100])
 PKG_CHECK_MODULES(FFMPEGTHUMB, [libffmpegthumbnailer >= 2.2.0])
