--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,7 @@
 AC_PREREQ(2.64)
 AC_INIT([imgcat], [1.1.4], [https://github.com/whatdoineed2do/imgcat/issues], [https://github.com/whatdoineed2do/imgcat], [whatdoineed2do@nospam-github.com])
 AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
+AC_CONFIG_MACRO_DIRS([m4])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AC_CONFIG_SRCDIR([src/])
 AC_CONFIG_HEADERS([config.h])
@@ -9,14 +10,15 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_HEADER_STDC
 AC_PROG_INSTALL
+AC_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG
 
-PKG_CHECK_MODULES(IMAGEMAGICK, [Magick++             >= 6.9.9])
-PKG_CHECK_MODULES(EXIV,        [exiv2                >= 0.25])
-PKG_CHECK_MODULES(AVFORMAT,    [libavformat          >= 57.71.100])
-PKG_CHECK_MODULES(AVUTIL,      [libavutil            >= 55.58.100])
+PKG_CHECK_MODULES(IMAGEMAGICK, [Magick++ >= 6.9.9])
+PKG_CHECK_MODULES(EXIV,        [exiv2 >= 0.25])
+PKG_CHECK_MODULES(AVFORMAT,    [libavformat >= 57.71.100])
+PKG_CHECK_MODULES(AVUTIL,      [libavutil >= 55.58.100])
 PKG_CHECK_MODULES(FFMPEGTHUMB, [libffmpegthumbnailer >= 2.2.0])
-PKG_CHECK_MODULES(SAMPLEICC,   [sampleicc            >= 1.6.8])
+PKG_CHECK_MODULES(SAMPLEICC,   [sampleicc >= 1.6.8])
 
 AC_ARG_ENABLE([debug-code],
 	[AS_HELP_STRING([--enable-debug],
