--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 AC_PREREQ(2.64)
-AC_INIT([imgcat], [1.1.4], [https://github.com/whatdoineed2do/imgcat/issues], [https://github.com/whatdoineed2do/imgcat], [whatdoineed2do@nospam-github.com])
+AC_INIT([imgcat], [1.1.5], [https://github.com/whatdoineed2do/imgcat/issues], [https://github.com/whatdoineed2do/imgcat], [whatdoineed2do@nospam-github.com])
 AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
 AC_CONFIG_MACRO_DIRS([m4])
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_CONFIG_SRCDIR([src/])
 AC_CONFIG_HEADERS([config.h])
 
