add libavcodec/filter dep for ffmpegthumbnailer

--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,8 @@ PKG_CHECK_MODULES(IMAGEMAGICK, [Magick++ >= 6.9.9])
 PKG_CHECK_MODULES(EXIV,        [exiv2 >= 0.25])
 PKG_CHECK_MODULES(AVFORMAT,    [libavformat >= 57.71.100])
 PKG_CHECK_MODULES(AVUTIL,      [libavutil >= 55.58.100])
+PKG_CHECK_MODULES(AVCODEC,     [libavcodec >= 57.48.101])
+PKG_CHECK_MODULES(AVFILTER,    [libavfilter >= 6.47.100])
 PKG_CHECK_MODULES(FFMPEGTHUMB, [libffmpegthumbnailer >= 2.2.0])
 PKG_CHECK_MODULES(SAMPLEICC,   [sampleicc >= 1.6.8])
 
