ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ imgprextr
 *.o
 *.swp
 avinfo
+*.lo
+*.la
+*.a
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+contrib/SampleICC-1.6.8/
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+missing
+.deps/
+stamp-h1
+
