--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-AC_PREREQ(2.64)
-AC_INIT([imgcat], [m4_esyscmd([git describe --tags --dirty --always | tr -d '\n'])], [https://github.com/whatdoineed2do/imgcat/issues], [https://github.com/whatdoineed2do/imgcat], [whatdoineed2do@nospam-github.com])
+AC_PREREQ([2.69])
+AC_INIT([imgcat],[m4_esyscmd([git describe --tags --dirty --always | tr -d '\n'])],[https://github.com/whatdoineed2do/imgcat/issues],[https://github.com/whatdoineed2do/imgcat],[whatdoineed2do@nospam-github.com])
 AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
 AC_CONFIG_MACRO_DIRS([m4])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
@@ -10,7 +10,7 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_HEADER_STDC
 AC_PROG_INSTALL
-AC_PROG_LIBTOOL
+LT_INIT
 PKG_PROG_PKG_CONFIG
 
 PKG_CHECK_MODULES(IMAGEMAGICK, [Magick++ >= 6.9.9])
@@ -22,22 +22,16 @@ PKG_CHECK_MODULES(AVFILTER,    [libavfilter >= 6.47.100])
 PKG_CHECK_MODULES(FFMPEGTHUMB, [libffmpegthumbnailer >= 2.1.0])
 PKG_CHECK_MODULES(SAMPLEICC,   [sampleicc >= 1.6.8])
 
-AC_ARG_ENABLE([debug-code],
-	[AS_HELP_STRING([--enable-debug],
-	[enable debug (default is no)])],
-	[no_debug=false],
-	[no_debug=true])
-if test "$no_debug" = true; then
-        building_debug=no
+AC_ARG_ENABLE(debug,
+        AS_HELP_STRING([--enable-debug],[enable debug code (default is no)]),
+        [ debug="${enableval}" ], [ debug=no ] )
+if test "x$debug" = xno; then
         AC_DEFINE(NDEBUG,1,[debug code])
-else
-        building_debug=yes
-        AC_DEFINE(DEBUG,1,[debug code])
 fi
 
-
-AC_OUTPUT([
+AC_CONFIG_FILES([
 Makefile
 src/Makefile
 tests/Makefile
 ])
+AC_OUTPUT
