--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,13 +9,13 @@ bin_PROGRAMS = imagickICCconvert avinfo exiv
 imagickICCconvert_CPPFLAGS = $(AM_CPPFLAGS)
 imagickICCconvert_CXXFLAGS = $(AM_CXXFLAGS) $(IMAGEMAGICK_CFLAGS)
 imagickICCconvert_LDFLAGS = $(IMAGEMAGICK_LIBS)
-imagickICCconvert_LDADD = ../src/libimgcat.la
+imagickICCconvert_LDADD = ../src/cat/libimgcat.la
 imagickICCconvert_SOURCES = imagickICCconvert.cc
     
 avinfo_CPPFLAGS = $(AM_CPPFLAGS)
 avinfo_CXXFLAGS = $(AM_CXXFLAGS) $(AVUTIL_CFLAGS) $(AVFORMAT_CFLAGS)
 avinfo_LDFLAGS = $(AM_LDFLAGS) $(AVUTIL_LIBS) $(AVFORMAT_LIBS)
-avinfo_LDADD = ../src/libimgcat.la
+avinfo_LDADD = ../src/cat/libimgcat.la
 avinfo_SOURCES = avinfo.cc
     
 exiv_CPPFLAGS = $(AM_CPPFLAGS)
