github: autoconf-archive for ax_cxx_compile_stdcxx.m4

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -yq \
-        build-essential autotools-dev autoconf libtool \
+        build-essential autotools-dev autoconf autoconf-archive libtool \
         libmagick++-6.q16-dev \
         libexiv2-dev \
         libavformat-dev libavutil-dev libavcodec-dev libavfilter-dev \
